# leptail

./: .gitignore  Cargo.toml  LICENSE  README.md  Shuttle.toml  build.rs  leptosfmt.toml  tailwind.config.gradiance.js  tailwind.config.js
.github/workflows/: ci.yml  demo.yml  production.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/leptail_doc/: doc_routes.rs
app/src/leptail_doc/pages/: appbar.rs  drawer.rs  drawer_doc.rs  mod.rs  overview.rs  switch_doc.rs
app/src/leptail_doc/themes/gradiance/: gradiance_routes.rs  mod.rs
app/src/leptail_doc/themes/gradiance/pages/: common_components.rs  drawer_doc.rs  switch_doc.rs
app/src/leptail_doc/themes/moonlight/: moonlight_routes.rs
app/src/leptail_doc/themes/moonlight/pages/: drawer_doc.rs  mod.rs  switch_doc.rs
demo/: Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  rust-toolchain.yml  tailwind.config.gradiance.js  tailwind.config.js  tailwind.config.moonlight.js
demo/app/: Cargo.toml  build.rs
demo/app/src/: error_template.rs  lib.module.scss  lib.rs  pages.rs
demo/app/src/leptail_doc/: doc_routes.rs  mod.rs
demo/app/src/leptail_doc/pages/: appbar.rs
demo/app/src/leptail_doc/themes/: mod.rs
demo/app/src/leptail_doc/themes/gradiance/: gradiance_routes.rs
demo/app/src/leptail_doc/themes/gradiance/pages/: appbar_doc.rs  common_components.rs  drawer_doc.rs  mod.rs  switch_doc.rs
demo/app/src/leptail_doc/themes/moonlight/: mod.rs  moonlight_routes.rs
demo/app/src/leptail_doc/themes/moonlight/pages/: drawer_doc.rs  mod.rs  switch_doc.rs
demo/app/src/pages/: error_example.rs  error_template.rs  home.module.scss  home.rs
demo/frontend/src/: lib.rs
demo/server/: Cargo.toml
demo/server/src/: fileserv.rs  main.rs
demo/style/: main.scss  tailwind.css
frontend/src/: lib.rs
leptail/: Cargo.toml  README.md
leptail/src/: callback.rs  icon.rs  input.rs  lib.rs  navigation.rs  overlay.rs  surfaces.rs  theme.rs
leptail/src/input/: switch.rs
leptail/src/navigation/: drawer.rs
leptail/src/surfaces/: appbar.rs
leptail_build/: Cargo.toml
leptail_build/src/: lib.rs
leptail_component/: Cargo.toml
leptail_component/src/: lib.rs  switch.rs
leptail_core/: Cargo.toml  README.md
leptail_core/src/: dom.rs  hook.rs  lib.rs  state.rs
leptail_core/src/hook/: interactions.rs  toggle.rs
leptail_core/src/hook/interactions/: press.rs
leptail_core/src/state/: controllable.rs  toggle.rs
leptail_core/src/types/: events.rs
leptail_system/: Cargo.toml
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
tailwind-utils/: Cargo.toml
tailwind-utils/src/: lib.rs
theme-gradiance/: Cargo.toml
theme-gradiance/src/: gradiance.rs  lib.rs
theme-gradiance/src/gradiance/: body_theme.rs  input.rs  navigation.rs  overlay_theme.rs  surfaces.rs
theme-gradiance/src/gradiance/input/: switch_theme.rs
theme-gradiance/src/gradiance/navigation/: drawer_theme.rs
theme-gradiance/src/gradiance/surfaces/: appbar_theme.rs
theme-moonlight/: Cargo.toml
theme-moonlight/src/: lib.rs  moonlight.rs
theme-moonlight/src/moonlight/: body_theme.rs  overlay_theme.rs  surfaces.rs
theme-moonlight/src/moonlight/input/: switch_theme.rs
theme-moonlight/src/moonlight/navigation/: drawer_theme.rs
theme-moonlight/src/moonlight/surfaces/: appbar_theme.rs
