[workspace]
members = ["leptail_core", "leptail_component", "leptail_system"]

# dependencies
[workspace.dependencies]
leptos = { version = "0.7.0-alpha", features = ["nightly"] }
leptos_router = { version = "0.7.0-alpha", features = ["nightly"] }
leptos_icons = { version = "0.3.0", features = [] }
icondata = "0.3.0"

leptail_core = { path = "./leptail_core" }
leptail_component = { path = "./leptail_component" }
leptail_system = { path = "./leptail_system" }


# TODO: Clean up the dependencies: clean build once and verify; 
# axum = "0.7"
cfg-if = "1.0.0"
# console_error_panic_hook = "0.1.7"
# console_log = "1.0.0"
http = "1"
# log = "0.4.21"
# simple_logger = "4.3.3"
thiserror = "1.0.58"
# tokio = { version = "1.36.0", features = ["full"] }
# tower = { version = "0.4.13", features = ["full"] }
# tower-http = { version = "0.5", features = ["full"] }
# wasm-bindgen = "=0.2.92"
web-sys = "0.3.64"
