[package]
name = "leptail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_icons = { workspace = true }
icondata = { workspace = true }

# into-trait = {workspace = true}
web-sys = { workspace = true, features = [
    "DomRect",
    "Event",
    "KeyboardEvent",
    "EventTarget",
    "HtmlFormElement",
    "HtmlInputElement", 
] }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true


[features]
default = []
# hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
# ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]
