[package]
name = "leptail-theme-gradiance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptail = { path = "../leptail" }
leptail-tailwind-utils = { path = "../tailwind-utils" }
leptos_icons = { workspace = true }
icondata = { workspace = true }

