[package]
name = "leptail_theme_moonlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptail = { path = "../leptail" }
# TODO: change the path name to snake case instead of hyphenated path 
leptail-tailwind-utils = { path = "../tailwind-utils" }
leptos_icons = { workspace = true }
icondata = { workspace = true }
tailwind_fuse = { workspace = true }