[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_icons = { workspace = true }
stylance.workspace = true
icondata = { workspace = true }
# into-trait = { workspace = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

leptail_component = { workspace = true }
leptail_system = { workspace = true }


[features]
default = []
hydrate = [
    "leptos/hydrate",
    # "leptos_meta/hydrate", 
    # "leptos_router/hydrate",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum"]


[package.metadata.stylance]

# output_file
# When set, stylance-cli will bundle all css module files
# into by concatenating them and put the result in this file.
# output_file = "./styles/bundle.scss"

output_dir = "../style/"
folders = ["./src/", "../style/"]
extensions = [".module.scss", ".module.css"]

# scss_prelude
# When generating an scss file stylance-cli will prepend this string
# Useful to include a @use statement to all scss modules.
# scss_prelude = '@use "../path/to/prelude" as *;'
